# easyshort

./: .gitignore  404.html  Cargo.toml  README.md  database.db  dev-home.sh  dev-preview.sh  dev-redirect.sh  elm.js  flake.nix  index.html  preview.html  redirect.js  style.css
.github/workflows/: deploy_backend.yml  main.yml
fe/: elm.js  index.html  preview.js  redirect.js
fe/elm-stuff/0.19.1/: Entries.elmi  Entries.elmo  Home.elmi  Home.elmo  Redirect.elmi  Redirect.elmo  Search.elmi  Search.elmo
fe/src/: Entries.elm  Home.elm  Preview.elm  Redirect.elm
src/: main.rs
