[package]
name = "easyshort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
jammdb = "0.11.0"
random_word = { version = "0.4.3", features = ["en"] }
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }
